--- a/libuvccamera/build.gradle
+++ b/libuvccamera/build.gradle
@@ -27,6 +27,11 @@ import org.apache.tools.ant.taskdefs.condition.Os
 android {
 	compileSdkVersion versionCompiler
 	buildToolsVersion versionBuildTool
+	publishNonDefault true
+
+	lintOptions {
+          abortOnError false
+    }
 
 	compileOptions {
 		sourceCompatibility javaSourceCompatibility
@@ -34,7 +39,7 @@ android {
 	}
 
     defaultConfig {
-        minSdkVersion 14
+        minSdkVersion 16
 		targetSdkVersion versionTarget
     }
 
@@ -43,13 +48,23 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
+        debug {
+			minifyEnabled false
+            jniDebuggable true
+        }
     }
 	sourceSets {
 		main {
-			jniLibs.srcDir 'src/main/libs'
+			// jniLibs.srcDir 'src/main/libs'
 			jni.srcDirs = []
 		}
 	}
+    
+    externalNativeBuild {
+        ndkBuild {
+            path file('src/main/jni/Android.mk')
+        }
+    }
 }
 
 tasks.withType(JavaCompile) {
@@ -85,11 +100,9 @@ clean.dependsOn 'ndkClean'
 
 dependencies {
     implementation fileTree(dir: new File(buildDir, 'libs'), include: '*.jar')
-
-	implementation "com.android.support:support-v4:${supportLibVersion}"
-	implementation "com.android.support:support-annotations:${supportLibVersion}"
-
-	implementation("com.serenegiant:common:${commonLibVersion}") {
-		exclude module: 'support-v4'
-	}
+    implementation "com.android.support:support-v4:${supportLibVersion}"
+    implementation "com.android.support:support-annotations:${supportLibVersion}"
+    implementation("com.serenegiant:common:${commonLibVersion}") {
+    	exclude module: 'support-v4'
+    }
 }
