--- a/usbCameraTest0/build.gradle
+++ b/usbCameraTest0/build.gradle
@@ -27,6 +27,11 @@ android {
 	compileSdkVersion versionCompiler
 	buildToolsVersion versionBuildTool
 
+	lintOptions {
+		abortOnError false
+	}
+
+
 	compileOptions {
 		sourceCompatibility javaSourceCompatibility
 		targetCompatibility javaTargetCompatibility
@@ -34,7 +39,7 @@ android {
 
     defaultConfig {
         applicationId "com.serenegiant.usbcameratest0"
-        minSdkVersion 14
+        minSdkVersion 16
 		targetSdkVersion versionTarget
 		versionCode 8
 		versionName "3.00"
@@ -45,17 +50,18 @@ android {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-project.txt'
         }
+        debug {
+            jniDebuggable true
+        }
     }
 }
 
 dependencies {
-	api fileTree(dir: 'libs', include: ['*.jar'])
-
-	implementation "com.android.support:support-v4:${supportLibVersion}"
-	implementation "com.android.support:support-annotations:${supportLibVersion}"
-
-	implementation("com.serenegiant:common:${commonLibVersion}") {
-		exclude module: 'support-v4'
-	}
-	implementation project(':libuvccamera')
+    api fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "com.android.support:support-v4:${supportLibVersion}"
+    implementation "com.android.support:support-annotations:${supportLibVersion}"
+    implementation("com.serenegiant:common:${commonLibVersion}") {
+        exclude module: 'support-v4'
+    }
+    implementation project(':libuvccamera')
 }
