--- a/usbCameraTest2/build.gradle
+++ b/usbCameraTest2/build.gradle
@@ -26,6 +26,9 @@ apply plugin: 'com.android.application'
 android {
 	compileSdkVersion versionCompiler
 	buildToolsVersion versionBuildTool
+	lintOptions {
+          abortOnError false
+    }
 
 	compileOptions {
 		sourceCompatibility javaSourceCompatibility
@@ -34,7 +37,7 @@ android {
 
     defaultConfig {
         applicationId "com.serenegiant.usbcameratest2"
-        minSdkVersion 18
+        minSdkVersion 16
 		targetSdkVersion versionTarget
 		versionCode 8
 		versionName "3.00"
@@ -45,17 +48,18 @@ android {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-project.txt'
         }
+        debug {
+            jniDebuggable true
+        }
     }
 }
 
 dependencies {
-	api fileTree(dir: 'libs', include: ['*.jar'])
-
-	implementation "com.android.support:support-v4:${supportLibVersion}"
-	implementation "com.android.support:support-annotations:${supportLibVersion}"
-
-	implementation("com.serenegiant:common:${commonLibVersion}") {
-		exclude module: 'support-v4'
-	}
-	implementation project(':libuvccamera')
+    api fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "com.android.support:support-v4:${supportLibVersion}"
+    implementation "com.android.support:support-annotations:${supportLibVersion}"
+    implementation("com.serenegiant:common:${commonLibVersion}") {
+        exclude module: 'support-v4'
+    }
+    implementation project(':libuvccamera')
 }
