--- a/usbCameraTest3/build.gradle
+++ b/usbCameraTest3/build.gradle
@@ -27,14 +27,19 @@ android {
 	compileSdkVersion versionCompiler
 	buildToolsVersion versionBuildTool
 
-	compileOptions {
+    lintOptions {
+        abortOnError false
+    }
+
+
+    compileOptions {
 		sourceCompatibility javaSourceCompatibility
 		targetCompatibility javaTargetCompatibility
 	}
 
     defaultConfig {
         applicationId "com.serenegiant.usbcameratest3"
-        minSdkVersion 18
+        minSdkVersion 16
 		targetSdkVersion versionTarget
 		versionCode 8
 		versionName "3.00"
@@ -45,18 +50,19 @@ android {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-project.txt'
         }
+        debug {
+            jniDebuggable true
+        }
     }
 }
 
 dependencies {
-	api fileTree(dir: 'libs', include: ['*.jar'])
-
-	implementation "com.android.support:support-v4:${supportLibVersion}"
-	implementation "com.android.support:support-annotations:${supportLibVersion}"
-
-	implementation("com.serenegiant:common:${commonLibVersion}") {
-		exclude module: 'support-v4'
-	}
-	implementation project(':libuvccamera')
-	implementation project(':usbCameraCommon')
+    api fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "com.android.support:support-v4:${supportLibVersion}"
+    implementation "com.android.support:support-annotations:${supportLibVersion}"
+    implementation("com.serenegiant:common:${commonLibVersion}") {
+        exclude module: 'support-v4'
+    }
+    implementation project(':libuvccamera')
+    implementation project(':usbCameraCommon')
 }
