--- a/usbCameraTest7/build.gradle
+++ b/usbCameraTest7/build.gradle
@@ -27,6 +27,10 @@ android {
 	compileSdkVersion versionCompiler
 	buildToolsVersion versionBuildTool
 
+	lintOptions {
+		abortOnError false
+	}
+
 	compileOptions {
 		sourceCompatibility javaSourceCompatibility
 		targetCompatibility javaTargetCompatibility
@@ -34,7 +38,7 @@ android {
 	
     defaultConfig {
         applicationId "com.serenegiant.usbcameratest7"
-        minSdkVersion 18
+        minSdkVersion 16
 		targetSdkVersion versionTarget
 		versionCode 9
 		versionName "3.00"
